--- a/tools_proj/XCPP/XTable/XTable.vcxproj
+++ b/tools_proj/XCPP/XTable/XTable.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -153,7 +153,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Common.h" />
+    <ClInclude Include="DefaultEquip.h"/>
+	<ClInclude Include="FashionList.h"/>
+	<ClInclude Include="FashionSuit.h"/>
+	<ClInclude Include="SceneList.h"/>
+	<ClInclude Include="XEntityPresentation.h"/>
+	<ClInclude Include="XEntityStatistics.h"/>
+	<ClInclude Include="XNpcList.h"/>
+	<ClInclude Include="Common.h" />
     <ClInclude Include="EquipSuit.h" />
     <ClInclude Include="QteStatusList.h" />
     <ClInclude Include="Log.h" />
@@ -161,7 +168,14 @@
     <ClInclude Include="NativeReader.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Common.cpp" />
+    <ClInclude Include="DefaultEquip.cpp"/>
+	<ClInclude Include="FashionList.cpp"/>
+	<ClInclude Include="FashionSuit.cpp"/>
+	<ClInclude Include="SceneList.cpp"/>
+	<ClInclude Include="XEntityPresentation.cpp"/>
+	<ClInclude Include="XEntityStatistics.cpp"/>
+	<ClInclude Include="XNpcList.cpp"/>
+	<ClCompile Include="Common.cpp" />
     <ClCompile Include="EquipSuit.cpp" />
     <ClCompile Include="QteStatusList.cpp" />
     <ClCompile Include="Log.cpp" />
