--- a/tools_proj/XCPP/XTable/XTable.vcxproj.filters
+++ b/tools_proj/XCPP/XTable/XTable.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="源文件">
@@ -18,7 +18,28 @@
     <ClInclude Include="NativeReader.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Common.h">
+    <ClInclude Include="DefaultEquip.h">
+		<Filter>头文件</Filter>
+	</ClInclude>
+	<ClInclude Include="FashionList.h">
+		<Filter>头文件</Filter>
+	</ClInclude>
+	<ClInclude Include="FashionSuit.h">
+		<Filter>头文件</Filter>
+	</ClInclude>
+	<ClInclude Include="SceneList.h">
+		<Filter>头文件</Filter>
+	</ClInclude>
+	<ClInclude Include="XEntityPresentation.h">
+		<Filter>头文件</Filter>
+	</ClInclude>
+	<ClInclude Include="XEntityStatistics.h">
+		<Filter>头文件</Filter>
+	</ClInclude>
+	<ClInclude Include="XNpcList.h">
+		<Filter>头文件</Filter>
+	</ClInclude>
+	<ClInclude Include="Common.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Log.h">
@@ -44,7 +65,28 @@
     <ClCompile Include="NativeInterface.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Common.cpp">
+    <ClInclude Include="DefaultEquip.cpp">
+		<Filter>源文件</Filter>
+	</ClInclude>
+	<ClInclude Include="FashionList.cpp">
+		<Filter>源文件</Filter>
+	</ClInclude>
+	<ClInclude Include="FashionSuit.cpp">
+		<Filter>源文件</Filter>
+	</ClInclude>
+	<ClInclude Include="SceneList.cpp">
+		<Filter>源文件</Filter>
+	</ClInclude>
+	<ClInclude Include="XEntityPresentation.cpp">
+		<Filter>源文件</Filter>
+	</ClInclude>
+	<ClInclude Include="XEntityStatistics.cpp">
+		<Filter>源文件</Filter>
+	</ClInclude>
+	<ClInclude Include="XNpcList.cpp">
+		<Filter>源文件</Filter>
+	</ClInclude>
+	<ClCompile Include="Common.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="QteStatusList.cpp">
