--- a/.gitignore
+++ b/.gitignore
@@ -2,23 +2,24 @@
 /Win32/
 /IOS/
 
-**/tools_proj/XForm/XForm/bin/
-**/tools_proj/XForm/XForm/obj/
-**/tools_proj/XForm/Log/
-**/tools_proj/Android/obj/
-**/tools_proj/XCPP/XCPP/Debug/
-**/tools_proj/XCPP/XCPP/x64/
-**/tools_proj/XCPP/XCPP.opensdf
-**/tools_proj/XCPP/ipch/
-**/tools_proj/XCPP/Debug/
-**/tools_proj/XCPP/Release/
-**/tools_proj/XCPP/x64/
-**/tools_proj/XCPP/XCPP/Release/
-**/tools_proj/XCPP/XTable/Debug/
-**/tools_proj/XCPP/XTable/Release/
-**/tools_proj/XCPP/XTable/x64/
-**/tools_proj/XLib/XLib/bin/
-**/tools_proj/XLib/XLib/obj/
+/tools_proj/XForm/XForm/bin/
+/tools_proj/XForm/XForm/obj/
+/tools_proj/XForm/Log/
+/tools_proj/Android/obj/
+/tools_proj/XCPP/XCPP/Debug/
+/tools_proj/XCPP/XCPP/x64/
+/tools_proj/XCPP/XCPP.opensdf
+/tools_proj/XCPP/ipch/
+/tools_proj/XCPP/Debug/
+/tools_proj/XCPP/Release/
+/tools_proj/XCPP/x64/
+/tools_proj/XCPP/XCPP/Log/
+/tools_proj/XCPP/XCPP/Release/
+/tools_proj/XCPP/XTable/Debug/
+/tools_proj/XCPP/XTable/Release/
+/tools_proj/XCPP/XTable/x64/
+/tools_proj/XLib/XLib/bin/
+/tools_proj/XLib/XLib/obj/
 
 **/[Ll]ibrary/
 **/[Tt]emp/
