--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /tools_proj/XForm/Log/
 /tools_proj/Android/obj/
 /tools_proj/XCPP/ipch/
+/tools_proj/XCPP/Table/
 /tools_proj/XCPP/Debug/
 /tools_proj/XCPP/Release/
 /tools_proj/XCPP/x64/
