--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /tools_proj/XCPP/ipch/
 /tools_proj/XCPP/Debug/
 /tools_proj/XCPP/Release/
+/tools_proj/IOS/XTable/build/
+/tools_proj/OSX/XTable/build/
 /tools_proj/XCPP/x64/
 /tools_proj/XCPP/XCPP/Debug/
 /tools_proj/XCPP/XCPP/x64/
