--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="AIFactory.cpp" />
     <ClCompile Include="AITree.cpp" />
     <ClCompile Include="AITreeData.cpp" />
+    <ClCompile Include="AIUtil.cpp" />
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="DefaultEquip.cpp" />
     <ClCompile Include="EquipSuit.cpp" />
@@ -37,12 +38,14 @@
     <ClCompile Include="XEntityPresentation.cpp" />
     <ClCompile Include="XEntityStatistics.cpp" />
     <ClCompile Include="XNpcList.cpp" />
+    <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AIBehaviour.h" />
     <ClInclude Include="AIFactory.h" />
     <ClInclude Include="AITree.h" />
     <ClInclude Include="AITreeData.h" />
+    <ClInclude Include="AIUtil.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="common\picojson.h" />
     <ClInclude Include="DefaultEquip.h" />
@@ -58,7 +61,9 @@
     <ClInclude Include="SceneList.h" />
     <ClInclude Include="XEntityPresentation.h" />
     <ClInclude Include="XEntityStatistics.h" />
+    <ClInclude Include="XMath.h" />
     <ClInclude Include="XNpcList.h" />
+    <ClInclude Include="Vector3.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E0F3B7DD-2CFB-4B09-8A42-C742879ABA2F}</ProjectGuid>
