--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj
@@ -30,12 +30,14 @@
     <ClCompile Include="EquipSuit.cpp" />
     <ClCompile Include="FashionList.cpp" />
     <ClCompile Include="FashionSuit.cpp" />
+    <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="NativeInterface.cpp" />
     <ClCompile Include="NativeReader.cpp" />
     <ClCompile Include="patch.c" />
     <ClCompile Include="QteStatusList.cpp" />
     <ClCompile Include="SceneList.cpp" />
+    <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="XEntityPresentation.cpp" />
     <ClCompile Include="XEntityStatistics.cpp" />
     <ClCompile Include="XNpcList.cpp" />
@@ -50,18 +52,22 @@
     <ClInclude Include="AIType.h" />
     <ClInclude Include="AIUtil.h" />
     <ClInclude Include="Common.h" />
-    <ClInclude Include="common\picojson.h" />
     <ClInclude Include="DefaultEquip.h" />
     <ClInclude Include="EquipSuit.h" />
     <ClInclude Include="FashionList.h" />
     <ClInclude Include="FashionSuit.h" />
+    <ClInclude Include="GameMain.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="NativeInterface.h" />
     <ClInclude Include="NativeReader.h" />
     <ClInclude Include="patch.h" />
     <ClInclude Include="patch_types.h" />
+    <ClInclude Include="picojson.h" />
     <ClInclude Include="QteStatusList.h" />
     <ClInclude Include="SceneList.h" />
+    <ClInclude Include="GameTime.h" />
+    <ClInclude Include="Singleton.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="XEntityPresentation.h" />
     <ClInclude Include="XEntityStatistics.h" />
     <ClInclude Include="XMath.h" />
