--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 /tools_proj/XCPP/GameCore/x64/
 /tools_proj/XLib/XLib/bin/
 /tools_proj/XLib/XLib/obj/
+/tools_proj/XCPP/XCPP.VC.VC.opendb
 
 **/[Ll]ibrary/
 **/[Tt]emp/
